# bubble-shooter-level-design

./: .gitignore  PORTFOLIO.md  README.md  pyproject.toml
decisions/: 0002-difficulty-definition.md  0003-feature-vector.md  0004-generator-strategy.md  0005-multicollinearity-finding.md  0006-iteration-2-spec.md  0007-floating-and-rationale.md  0008-shot-pressure-decoupling.md  0009-alternating-row-widths.md  0010-progressive-rows.md
experiments/: 0001-first-generation.md  0001-first-generation.txt
levels/: L000.json  L001.json  L002.json  L003.json  L004.json  L005.json  L006.json  L007.json  L008.json  L009.json  L010.json  L011.json  L012.json  L013.json  L014.json  L015.json  L016.json  L017.json  L018.json  L019.json  L020.json  L021.json  L022.json  L023.json  L024.json  L025.json  L026.json  L027.json  L028.json  L029.json  L030.json  L031.json  L032.json  L033.json  L034.json  L035.json  L036.json  L037.json  L038.json  L039.json  (+60 more)
levels_iter1/: L000.json  L001.json  L002.json  L003.json  L004.json  L005.json  L006.json  L007.json  L008.json  L009.json  L010.json  L011.json  L012.json  L013.json  L014.json  L015.json  L016.json  L017.json  L018.json  L019.json  L020.json  L021.json  L022.json  L023.json  L024.json  L025.json  L026.json  L027.json  L028.json  L029.json  L030.json  L031.json  L032.json  L033.json  L034.json  L035.json  L036.json  L037.json  L038.json  L039.json  (+60 more)
levels_iter2_soft/: L000.json  L001.json  L002.json  L003.json  L004.json  L005.json  L006.json  L007.json  L008.json  L009.json  L010.json  L011.json  L012.json  L013.json  L014.json  (+85 more)
(+172 files in other folders)
