[project]
name = "bubble-portfolio"
version = "0.1.0"
description = "AI-assisted bubble shooter level design pipeline"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "anthropic>=0.40",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
